# MemoryManagement

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
Handle/: CMakeLists.txt
Handle/src/: HandleManager.cpp  Pow2Assert.h
ObjectPooling/: CMakeLists.txt
ObjectPooling/doc/: CMakeLists.txt
ObjectPooling/src/: CMakeLists.txt  SparseSet.hpp  TestClass.h
ObjectPooling/src/app/: main.cpp
ObjectPooling/test/: CMakeLists.txt
cmake/: DoxygenTarget.cmake  createTest.cmake
include/allocators/: Allocator.hpp  DefaultInitializer.hpp  FreeStore.hpp  FreeStoreAllocator.hpp  Heap.hpp  HeapAllocator.hpp  IAllocator.h
include/fastsharedptr/: Allocator.hpp  BasicObjectTraits.hpp  HeapPolicy.hpp  PoolAllocator.hpp
scripts/: install-dependencies.sh  run-tests.sh
src/Handle/src/: Handle.h  HandleManager.h  Main.cpp  Pow2Assert.cpp  TestHandleManager.cpp
src/ObjectPooling/doc/: config.doxygen.in
src/ObjectPooling/src/: ObjectPool.hpp  SparseSet.hpp
src/ObjectPooling/test/: SparseSet-test.cpp
test/allocators/: test-FreeStoreAllocator.cpp  test-PoolAllocator.cpp
test/fastsharedptr/: test-PoolAllocator.cpp
